--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,11 @@
 main:
-  - title: "Posts"
-    url: /posts/
-  - title: "Categories"
-    url: /categories/
-  - title: "Tags"
-    url: /tags/
   - title: "About"
-    url: /about/
+    url: /About/
+  - title: "Quotes"
+    url: /Quotes/
+  - title: "Tags"
+    url: /Tags/
+  - title: "CV"
+    url: /CV/
+    - tilte: /"Teaching"/
+    urs: /Teaching/
