--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ plugins:
 author:
   name   : "Tara Prasad Sharma"
   avatar : "/assets/images/Tara.jpeg"
-  bio    : Driven by a deep love for uncovering patterns  driven by a deep love for uncovering patterns and 
+  bio    : "Driven by a deep love for uncovering patterns  driven by a deep love for uncovering patterns and 
   sloving real-world problems. Teaching and research are my ways of sharing the beauty and power of math with others."
   links:
     - label: "Website"
