--- a/_config.yml
+++ b/_config.yml
@@ -64,9 +64,9 @@ author:
   bio    :###### I find deep satisfaction in sharing the elegance and transformative power of mathematics through teaching and
   research. Beyond academia, I cherish the balance brought by sports, meditation, and cherished moments withfamily and friends.
   links:
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https:/tarapsharma.github.io/"
+   - label: "Website"
+  icon: "fas fa-fw fa-link"
+  url: "https://tarapsharma.github.io/"
    # - label: "Twitter"
     #  icon: "fab fa-fw fa-twitter-square"
      # url: "https://twitter.com/"
@@ -78,7 +78,7 @@ author:
       url: "https://instagram.com/"
       - label: "LinkedIn"
       icon: "fab fa-linkedin"
-      url: "www.linkedin.com/in/taraps"
+      url: "https://www.linkedin.com/in/taraps"
 
 footer:
   links: 
