--- a/_config.yml
+++ b/_config.yml
@@ -61,8 +61,8 @@ plugins:
 author:
   name   : "Tara Prasad Sharma"
   avatar : "/assets/images/Tara.jpeg"
-  bio    : "<span style='font-size: 12px;'> I find deep satisfaction in sharing the elegance and transformative power of mathematics through teaching and
-  research. Beyond academia, I cherish the balance brought by sports, meditation, and cherished moments withfamily and friends.</span>"
+  bio    : I find deep satisfaction in sharing the elegance and transformative power of mathematics through teaching and
+  research. Beyond academia, I cherish the balance brought by sports, meditation, and cherished moments withfamily and friends.
   links:
    - label: "Website"
   icon: "fas fa-fw fa-link"
