--- a/_config.yml
+++ b/_config.yml
@@ -61,8 +61,7 @@ plugins:
 author:
   name   : "Tara Prasad Sharma"
   avatar : "/assets/images/Tara.jpeg"
-  bio    : I find deep satisfaction in sharing the elegance and transformative power of mathematics through teaching and
-  research. Beyond academia, I cherish the balance brought by sports, meditation, and cherished moments withfamily and friends.
+  bio    :Hi I am Tps.
   links:
    - label: "Website"
   icon: "fas fa-fw fa-link"
