--- a/_config.yml
+++ b/_config.yml
@@ -75,9 +75,9 @@ author:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/"
-       - label: "LinkedIn"
-       icon: "fab fa-fw fa-linkedin"
-       url: "https://www.linkedin.com/in/taraps"
+      # - label: "LinkedIn"
+       # icon: "fab fa-fw fa-linkedin"
+       # url: "https://www.linkedin.com/in/taraps"
 
 footer:
   links: 
