--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ author:
   links:
    - label: "Website"
   icon: "fas fa-fw fa-link"
-  url: "https://tarapsharma.github.io/"
+  url: "https:
    # - label: "Twitter"
     #  icon: "fab fa-fw fa-twitter-square"
      # url: "https://twitter.com/"
