--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,8 @@ plugins:
 author:
   name   : "Tara Prasad Sharma"
   avatar : "/assets/images/Tara.jpeg"
-  bio    : "<span style='font-size: 12px;'>Your bio text here okay thanks. </span>"
+  bio    : "<span style='font-size: 12px;'>I find deep satisfaction in sharing the elegance and transformative power of mathematics through teaching and research. 
+            Beyond academia, I cherish the balance brought by sports, meditation, and cherished moments with family and friends. </span>"
 
   links:
    - label: "Website"
