--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Configs for tara.com
 
-title: "Tara's Notes - tara.com"
+title: " tara.com"
 name: "tara.com"
 email: tpsharma2024@outlook.com
 url: "http://tarapsharma.github.io/"
