--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,9 @@ plugins:
 
 # Build settings
 markdown: kramdown
-remote_theme: "mmistakes/minimal-mistakes"
-minimal_mistakes_skin: "contrast"
+# remote_theme: "mmistakes/minimal-mistakes"
+# minimal_mistakes_skin: "contrast"
+remote_theme: cotes2020/chirpy-starter.git
 
 # settings for author profile
 author:
