--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title: " tara.com"
 name: "tara.com"
-email: tpsharma2024@outlook.com
+email: tarash463@gmail.com
 url: "http://tarapsharma.github.io/"
 repository: "tarapsharma/tarapsharma.github.io/"
 
@@ -39,7 +39,7 @@ author:
   location: "SK, IN"
   github : tarapsharma
   linkedin: taraps
-  email  : tpsharma2024@outlook.com
+  email  : tarash463@gmail.com
 
 
 # # comments by disqus
