--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ minimal_mistakes_skin: "air"
 # settings for author profile
 author:
   name   : "Tara Pd Sharma"
-  avatar : "/assets/images/Tara.jpeg"
+  avatar : "/assets/images/Tara1.jpeg"
   bio    : "I enjoy writing about things I'm interested in - mostly Math, Dhamma, and Nature."
   location: "SK, IN"
   github : tarapsharma
