--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ author:
   name   : "Tara Pd Sharma"
   avatar : "/assets/images/Tara1.jpeg"
   bio    : "I enjoy writing about things I'm interested in - mostly Math, Dhamma, and Nature."
-  location: "SK, IN"
+  location: "TX, US"
   github : tarapsharma
   linkedin: taraps
   email  : tarash463@gmail.com
