--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 main:
   - title: "About"
     url: /
-  - title: "Research"
-    url: /research/
+# - title: "Research"
+#   url: /research/
   - title: "Teaching"
     url: /teaching/
   - title: "Quotes"
